--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,7 +1,9 @@
 /* Slider Dots Style */
+
+/* 
 .splide__pagination {
   position: absolute;
-  bottom: -4.1% !important; /* important for override library defult style */
+  bottom: -4.1% !important; 
   left: 15% !important;
   display: flex;
   justify-content: center;
@@ -9,18 +11,17 @@
   margin-top: 1rem;
 }
 
-/* Remove 'bottom' for screens smaller than 1024px */
 @media (max-width: 1024px) {
   .splide__pagination {
-    bottom: 5px !important; /* edit the bottom property */
-    left: 20% !important; /* edit the left property */
+    bottom: 5px !important; 
+    left: 20% !important;
   }
-}
+} */
 
 .splide__pagination__page {
   width: 12px;
   height: 12px;
-  background-color: white !important;
+  background-color: #d9d9d9 !important;
   opacity: 1 !important;
   border-radius: 50%;
   cursor: pointer;
